# zorba-archive-module

./: .travis.yml  CMakeLists.txt  README.md
cmake_modules/: FindLibArchive.cmake
cmake_modules/Windows/: FindLibArchive.cmake
src/: CMakeLists.txt  archive.xsd  archive_module.xq  zip.xq
src/archive_module.xq.src/: archive_module.cpp  archive_module.h  config.h.in  strncasecmp.h  strptime.h
src/zip.xq.src/: zip.cpp  zip.h
test/ExpQueryResults/: delete_04.xml.res  dir_01.xml.res  dir_02.xml.res  dir_04.xml.res  entries_01.xml.res  entries_02.xml.res  entries_03.xml.res  extract_01.xml.res  extract_02.xml.res  extract_04.xml.res  extract_05.xml.res  extract_06.xml.res  extract_07.xml.res  options_01.xml.res  options_02.xml.res  update_01.xml.res  update_02.xml.res  update_03.xml.res
test/Queries/: create_01.xq  create_02.xq  create_03.spec  create_03.xq  delete_01.xq  delete_02.xq  delete_03.xq  delete_04.xq  dir_01.xq  dir_02.xq  dir_03.xq  dir_04.xq  entries_01.xq  entries_02.xq  entries_03.xq  entries_04.spec  entries_04.xq  extract_01.xq  extract_02.xq  extract_03.spec  extract_03.xq  extract_04.xq  extract_04.xq.~1~  extract_05.xq  extract_06.xq  extract_07.xq  options_01.xq  options_02.spec  options_02.xq  options_03.xq  simple.tar.bz2  update_01.xq  update_02.xq  update_03.spec  update_03.xq  update_04.xq
